--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -418,8 +418,8 @@ zoom: 1;*/
 }
 
 #remoteContent{
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 #updates{
